print the OS X deployment target and selected SDK after the feature_summary.
Committed from host : Portia.local

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,3 +119,9 @@ if(BUILD_KDE_THEME_PLUGIN)
 endif()
 
 feature_summary(WHAT ALL   FATAL_ON_MISSING_REQUIRED_PACKAGES)
+if(CMAKE_OSX_DEPLOYMENT_TARGET)
+    message(STATUS "OS X Deployment target: ${CMAKE_OSX_DEPLOYMENT_TARGET}")
+endif()
+if(CMAKE_OSX_SYSROOT)
+    message(STATUS "OS X SDK sysroot: ${CMAKE_OSX_SYSROOT}")
+endif()
