--- a/src/qcocoa-qpa/CMakeLists.txt
+++ b/src/qcocoa-qpa/CMakeLists.txt
@@ -32,6 +32,9 @@ if(Qt5_FOUND AND (NOT ${Qt5_VERSION} VERSION_LESS ${QT_REAL_MIN_VERSION}))
             -DQT_NO_CAST_TO_ASCII
             -DQT_NO_URL_CAST_FROM_STRING)
         add_definitions(-DQT_PLUGIN)
+        if(HAVE_INFINALITY)
+            add_definitions(-DHAVE_INFINALITY)
+        endif()
         include(FindPkgConfig)
         pkg_check_modules(FREETYPE REQUIRED freetype2)
         pkg_check_modules(FONTCONFIG REQUIRED fontconfig)
