Remove overly chatty warning flag from Qt plugin builds
Committed from host : Portia.local

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ if(BUILD_KDE_THEME_PLUGIN)
     add_subdirectory(platformtheme)
 endif()
 if(BUILD_QT_PLUGINS)
+    string(REPLACE "-Wzero-as-null-pointer-constant" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
     add_subdirectory(qmacstyle)
     add_subdirectory(qcocoa-qpa)
 endif()
